--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,12 @@
             "type": "dart",
             "request": "launch",
             "program": "lib/main.dart",
+        },
+        {
+            "name": "Showcase",
+            "type": "dart",
+            "request": "launch",
+            "program": "design/showcase/lib/main.dart",
         }
     ]
 }
